--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,16 @@
 name: Build
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+
+on: push
 
 jobs:
   build:
     runs-on: ubuntu-20.04
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-          
-    - name: Check codestyle
-      run: |
-        git ls-files *.{c,h} | xargs clang-format -i --verbose
-        git diff --exit-code
+      - uses: actions/checkout@v2
 
-    - name: Build application
-      run: make
-    - name: Build test
-      run: make tests
-        
-    
-      
-    - name: Run tests
-      run: ./bin/tests
+      - name: Check codestyle
+        run: git ls-files *.{c,h} | xargs clang-format -i --verbose && git diff --exit-code
+
+      - name: Build application
+        run: make
